--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "",
-  "homepage": "https://ahusset.github.io/portfolio/",
+  "name": "portfolio",
+  "homepage": "https://ahusset.github.io/portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
